# inventory_web

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: deploy.yml
Companies/: admin.py  models.py  urls.py
Companies/migrations/: 0001_initial.py
Devices/: models.py  urls.py  views.py
Devices/migrations/: 0001_initial.py
Employees/: models.py  views.py
Employees/migrations/: 0001_initial.py
Users/: models.py  urls.py  views.py
Users/migrations/: 0001_initial.py
data/: db.sqlite3.bak
inventory_web/: __init__.py  asgi.py  home_urls.py  service.py  settings.py  urls.py  utils.py  views.py  wsgi.py
inventory_web/api/: views.py
inventory_web/companies/: apps.py  forms.py  models.py  tests.py  views.py
inventory_web/companies/migrations/: 0001_initial.py  0002_alter_company_telegram_chat_id.py  (+7 more)
inventory_web/devices/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  utils.py
inventory_web/employees/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
inventory_web/reprtsgen/: __init__.py  generator.py  utils.py
inventory_web/telegram/: __init__.py  sender.py  settings.py
inventory_web/templates/: base.html  home.html
inventory_web/users/: admin.py  apps.py  models.py
scripts/: deploy.sh  import-bitlocker-keys.ps1
templates/: base.html  login.html
templates/devices/: equipment_confirm_delete.html  equipment_form.html  equipmenttype_confirm_delete.html  equipmenttype_list.html
templates/users/: usercompany_confirm_delete.html
(+28 files in other folders)
