[project]
name = "inventory-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=5.2.10",
    "django-filter>=25.2",
    "gunicorn>=24.1.1",
    "psycopg2-binary>=2.9.11",
    "pytelegrambotapi>=4.30.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
